# mario_advance_4_3ds

./: CMakeLists.txt  README.md  Sprite-0001.ase  Sprite-0002.ase  mario sprites.ase  mario.elf  mario.smdh  raw sprites.aseprite  tiles.ase
3ds build/: Makefile  audio.d  game.lst  game.map  images.d  main.d  mario.map  sprites.d  sprites.h  tiles.d  tiles.h
VBA/: Super Mario Advance 4 - Super Mario Bros. 3 (U) (V1.1)-01.sgm  Super Mario Advance 4 - Super Mario Bros. 3 (U) (V1.1)-02.sgm  Super Mario Advance 4 - Super Mario Bros. 3 (U) (V1.1)-03.sgm  Super Mario Advance 4 - Super Mario Bros. 3 (U) (V1.1)-04.sgm  Super Mario Advance 4 - Super Mario Bros. 3 (U) (V1.1).sav  super-mario-advance-4-super-mario-bros-3.4397.sps
dependencies/: stb_image.h
gfx/: images.t3s
include/: animation.hpp  assetManager.hpp  audio.hpp  camera.hpp  controller.hpp  game.hpp  graphics.hpp  levelState.hpp  main.hpp  mapState.hpp  menuState.hpp  renderBuffer.hpp  renderProgram.hpp  window.hpp
resources/: primitiveShader.frag  primitiveShader.vert  spriteShader.frag  spriteShader.vert  testAnim.json  versatileShader.frag  versatileShader.vert
romfs/: bump.raw  coin.raw  death.raw  grow.raw  jump.raw  music11.raw  shortMusic.raw  stomp.raw
small tilesets/: cloud layer.tsx  main menu bg.aseprite  main menu bg.tsx  main menu.tiled-session  main menu.tmx  main menu.tsx  pipe.tsx  secret.tsx  slots minigame.tsx  throne room.tmx  throne room.tsx  world 1 castle secret.tmx  world 1 castle secret.tsx  world 1 castle.tmx  world 1 castle.tsx  world 1 map.tiled-session  world 1 map.tmx  (+24 more)
(+67 files in other folders)
